<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_trade">

    <fragment
        android:id="@+id/navigation_trade"
        android:name="com.jnu.jcircle.ui.trade.TradeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/navigation_hole"
        android:name="com.jnu.jcircle.ui.hole.HoleFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.jnu.jcircle.ui.news.NewsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>