<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:padding="10dp"
    android:orientation="vertical">

    <View
        android:id="@+id/ticket_cutline"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>

    <ImageView
        android:id="@+id/tickets_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/ticket_cutline" />

    <TextView
        android:id="@+id/tickets_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticket_cutline"
        android:layout_toEndOf="@id/tickets_pic"
        android:layout_marginStart="5dp"
        android:text="@string/ticket_type_delivery"
        android:textSize="28sp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tickets_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tickets_type"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tickets_pic"
        android:text="截止 15min"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tickets_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tickets_pic"
        android:layout_marginTop="3dp"
        android:maxLength="13"
        android:text="@string/ticket_location_1"
        android:textSize="17sp" />

    <Button
        android:id="@+id/tickets_claim"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:text="@string/ticket_claim"
        android:textSize="20sp" />

</RelativeLayout>